--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "lucide": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
